[gd_scene load_steps=16 format=3 uid="uid://bq5j1jnvcuejf"]

[ext_resource type="Script" path="res://Enemies/Bat.gd" id="1_mg6kt"]
[ext_resource type="Texture2D" uid="uid://2e5t6buwgog0" path="res://Enemies/Bat.png" id="2_7mmja"]
[ext_resource type="PackedScene" uid="uid://bvdbtghrh1n3j" path="res://Stats.tscn" id="2_yevc4"]
[ext_resource type="Texture2D" uid="uid://f5uiufflgpar" path="res://Shadows/SmallShadow.png" id="3_4aohk"]
[ext_resource type="PackedScene" uid="uid://mlulwx5wdlng" path="res://Interaction Boxes/Hurtbox.tscn" id="4_jcm42"]
[ext_resource type="PackedScene" uid="uid://dbkldojsc83ka" path="res://Interaction Boxes/player_detection_zone.tscn" id="6_yjvnx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_emyvq"]
atlas = ExtResource("2_7mmja")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rrtg"]
atlas = ExtResource("2_7mmja")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxqie"]
atlas = ExtResource("2_7mmja")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tow1w"]
atlas = ExtResource("2_7mmja")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mv37"]
atlas = ExtResource("2_7mmja")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_c70ct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_emyvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rrtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxqie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tow1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mv37")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ty0ag"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ysph"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_febb6"]
radius = 81.0247

[node name="Bat" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_mg6kt")

[node name="Stats" parent="." instance=ExtResource("2_yevc4")]
max_health = 3

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c70ct")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.474296
offset = Vector2(0, -12)

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_4aohk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ty0ag")

[node name="Hurtbox" parent="." instance=ExtResource("4_jcm42")]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_7ysph")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_yjvnx")]
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_febb6")

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
